# mdv

./: .gitignore  CMakeLists.txt  LICENSE  PHYSICS.es.md  PHYSICS.md  README.md  main.cpp  mdv.md
.github/: FUNDING.yml
docs/: paper.html
include/: OrbitPresets.h  OrbitPropagator.h
setup/: build.sh  setup.sh
src/: OrbitPresets.cpp  OrbitalElements.cpp  StateVector.cpp  Vector3D.cpp  main.cpp
src/camera/: CameraController.cpp  CameraController.h
src/core/: Constants.h  OrbitPresets.h  OrbitalElements.h  StateVector.h  Vector3D.h
src/input/: InputHandler.cpp  InputHandler.h
src/rendering/: EarthRenderer.cpp  EarthRenderer.h  GridRenderer.cpp  GridRenderer.h  GroundStationRenderer.cpp  GroundStationRenderer.h  GroundTrackRenderer.cpp  GroundTrackRenderer.h  OrbitRenderer.cpp  OrbitRenderer.h  RenderUtils.cpp  RenderUtils.h
src/simulation/: Eclipse.cpp  Eclipse.h  ForceModel.h  GroundStation.cpp  GroundStation.h  GroundTrack.cpp  GroundTrack.h  Integrator.cpp  Integrator.h  OrbitPropagator.cpp  OrbitPropagator.h  Satellite.cpp  Satellite.h  SolarAnalysis.cpp  SolarAnalysis.h
src/ui/: FontSystem.cpp  FontSystem.h  UIManager.cpp  UIManager.h  UITheme.h
